# minigui

./: CMakeLists.txt  MiniGUI.cfg  iconview.c  iconview_res_cn.h  iconview_res_en.h  input.c  mutil_window.c
